[gd_scene load_steps=8 format=3 uid="uid://dceaen04n1p3r"]

[ext_resource type="Script" uid="uid://d02057xet2g0m" path="res://battle/hud.gd" id="1_opxj0"]
[ext_resource type="FontFile" uid="uid://1tmrx86kyjfv" path="res://assets/fonts/health.ttf" id="2_tiucb"]
[ext_resource type="FontFile" uid="uid://ch4lp3qjrxfou" path="res://assets/fonts/ut_hp-font.otf" id="3_4amf3"]

[sub_resource type="LabelSettings" id="LabelSettings_4w67p"]
font = ExtResource("2_tiucb")
font_size = 24
outline_size = 9
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3nt0u"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xsala"]
bg_color = Color(1, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_c0gof"]
font = ExtResource("3_4amf3")
font_size = 10
outline_size = 9
outline_color = Color(0, 0, 0, 1)

[node name="hud" type="Node"]
script = ExtResource("1_opxj0")

[node name="name" type="Label" parent="."]
offset_left = 22.0
offset_top = 399.0
offset_right = 127.0
offset_bottom = 424.0
text = "Cassyi!"
label_settings = SubResource("LabelSettings_4w67p")

[node name="lv_amount" type="Label" parent="."]
offset_left = 133.0
offset_top = 399.0
offset_right = 202.0
offset_bottom = 423.0
text = "LV 19"
label_settings = SubResource("LabelSettings_4w67p")

[node name="hp_amount" type="Label" parent="."]
offset_left = 416.0
offset_top = 399.0
offset_right = 485.0
offset_bottom = 423.0
text = "92 / 92"
label_settings = SubResource("LabelSettings_4w67p")

[node name="hp_bar" type="ProgressBar" parent="."]
offset_left = 256.0
offset_top = 399.0
offset_right = 367.0
offset_bottom = 420.0
theme_override_styles/background = SubResource("StyleBoxFlat_3nt0u")
theme_override_styles/fill = SubResource("StyleBoxFlat_xsala")
max_value = 92.0
step = 1.0
value = 50.0
show_percentage = false

[node name="kr_amount" type="ColorRect" parent="hp_bar"]
layout_mode = 0
offset_left = 60.0
offset_right = 84.0
offset_bottom = 21.0
color = Color(1, 0, 1, 1)

[node name="hp_label" type="Label" parent="."]
offset_left = 225.0
offset_top = 404.0
offset_right = 251.0
offset_bottom = 414.0
text = "HP"
label_settings = SubResource("LabelSettings_c0gof")

[node name="kr_label" type="Label" parent="."]
offset_left = 376.0
offset_top = 404.0
offset_right = 402.0
offset_bottom = 414.0
text = "KR"
label_settings = SubResource("LabelSettings_c0gof")
